Se agregan CreatePost y UpdatePost
